--- a/v-dom.html
+++ b/v-dom.html
@@ -3,6 +3,9 @@
     .red{
         background-color: red;
     }
+    .green{
+        background-color: green;
+    }
 </style>
 <script>
     function h(tag, props, children){
@@ -14,7 +17,7 @@
     }
 
     function mount(vnode, container){
-        const el = document.createElement(vnode.tag)
+        const el = vnode.el = document.createElement(vnode.tag)
         //props
         if (vnode.props){
             for (const key in vnode.props) {
@@ -42,5 +45,76 @@
     ])
 
     mount(vdom, document.getElementById('app'))
+
+    function patch(n1, n2){
+
+        //check type of both node
+        if (n1.tag === n2.tag) {
+            const el = n2.el = n1.el
+            //props
+            const oldProps = n1.props || {}
+            const newProps = n2.props || {}
+
+            for (const key in newProps) {
+              const oldValue = oldProps[key]
+              const newValue = newProps[key]
+              if (newValue !== oldValue) {
+                  el.setAttribute(key, newValue)
+              }
+            }
+            for (const key in oldProps) {
+               if (!(key in newProps)) {
+                   el.removeAttribut(key)
+               }
+            }
+
+            //children
+            const oldChildren = n1.children || {}
+            const newChildren = n2.children || {}
+            if (typeof newChildren === 'string') {
+                if (typeof oldChildren === 'string') {
+                    if(newChildren !== oldChildren){
+                        el.textContent= newChildren
+                    }
+                } else {
+                    el.textContent = newChildren
+                }
+               
+            }else{
+                if (typeof oldChildren === 'string') {
+                    el.innerHTML = ''
+                    newChildren.forEach(child =>{
+                        mount(child, el)
+                    })
+                }else{
+                    //simple illustrative implementaiton of dephting to compare children arrays 
+                    //when patching the dom refer to vue source code for full implementation
+                    const commonLength = Math.min(oldChildren.length, newChildren.length)
+                    for (let i = 0; i < commonLength.lcommonLength; i++){
+                        patch(oldChildren[i],newChildren[i])           
+                    }
+                    if (newChildren.length > oldChildren.length) {
+                        newChildren.slice(oldChildren.length).forEach(child =>{
+                            mount(child, el)
+                        })
+                    }else if(newChildren.length < oldChildren.length){
+                        oldChildren.slice(oldChildren.length).forEach(child =>{
+                           el.removeChildren(child.el)
+                        })
+                    }
+
+                }
+
+            }
+        }else{
+            //replace
+        }
+    }
+
+    const vdom2 = h('div', { class : 'green'}, [
+        h('span', null, 'changed')
+    ])
+
+    patch(vdom, vdom2)
 
 </script>
